# opendog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  FIELD_NOTES.md  FUNCTION_TREE.md  QUICKSTART.md  QUICK_START-review.md  QUICK_START.md  README.md  REVIEW.md  build.rs  deny.toml  ruff.toml  test_timing.csv
.planning/: FUNCTION_TREE.md  GOVERNANCE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TASK_CARD_TEMPLATE.md  config.json  structural_hygiene_rules.json
deploy/: opendog.service
docs/: ARCHITECTURE_REVIEW_2026-05-14.md  ai-playbook.md  capability-index.md  documentation-alignment-summary-2026-04-28.md  historical-original-plan.md  json-contracts-mcp-governance.md  json-contracts.md  mcp-tool-reference-get-guidance.md  mcp-tool-reference.md  opendog-feature-introduction.md  opendog-project-panorama-and-rollout-plan.md  orphan-detection-feasibility-assessment.md  overdesign-assessment-2026-05-04.md  positioning.md
scripts/: check_external_security_audit_status.py  check_release_readiness.py  planning_governance_rules.py  planning_paths.py  repo_paths.py  structural_contract_guards.py  structural_hygiene_test_support.py  structural_rust_guards.py  task_card_rules.py  tech_debt_test_support.py  test_check_external_security_audit_status.py  test_check_release_readiness.py  test_external_security_audit_workflow.py  test_repo_paths.py  test_structural_contract_guards.py  test_structural_hygiene_test_support.py  test_structural_rust_guards.py  test_tech_debt_dependency_security.py  test_tech_debt_missing_tools.py  (+13 more)
src/: config.rs  (+7 more)
(+617 files in other folders)
