[package]
name = "opendog"
version = "0.1.0"
edition = "2021"
authors = ["JohnC <ninjas@sina.com>", "Claude (GLM-5.1)", "CodeX (GPT-5.4)"]

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "signal", "rt"] }
notify = "8.2"
procfs = "0.18"
rmcp = { version = "1.5", features = ["server", "transport-io"] }
clap = { version = "4", features = ["derive"] }
schemars = "0.8"
ctrlc = "3"
sd-notify = "0.5"
tracing-journald = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
